[add] single teacher
